5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1793_1602.log
== TEST (2019-05-30 19:28:26) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	print(vt,[-1])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:41) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(vt)):
		i=i+1
	print(vt,[-1])




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(vt)):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:25) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(vt)):
		i=i+1
	print(vt,[-1])




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(vt)):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:28) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(vt)):
		i=i+1
	print(vt,[-1])




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(vt)):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:03) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(i)):
		i=i+1
	print(vt,[-1])




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(i)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:39) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(i)):
		i=i+1
	print(vt,[-1])




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(i)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:49) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]=max(i)):
		i=i+1
	print(vt,[-1])




-- ERROR:
File "XXXX", line 5
    (vt[i]=max(i)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:35:49) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(i)):
		i=i+1
	print(vt,[-1])




-- EXECUTION TIME:
0.187972
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 5
    (vt[i]==max(i)):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:36:13) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(i)):
		i=i+1
	print(i)




-- EXECUTION TIME:
0.2307
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 5
    (vt[i]==max(i)):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:14) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(i)):
		i=i+1
	print(i)




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(i)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:23) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(vt)):
		i=i+1
	print(i)




-- ERROR:
File "XXXX", line 5
    (vt[i]==max(vt)):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:26) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(vt)
		i=i+1
	print(i)




-- ERROR:
File "XXXX", line 6
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:20) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	(vt[i]==max(vt))
		i=i+1
	print(i)




-- ERROR:
File "XXXX", line 6
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:59) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt)):
	i=i+1
	print(i)




-- ERROR:
File "XXXX", line 6
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:03) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt)):
	i=i+1
	print(i)




-- EXECUTION TIME:
0.16469
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 6
    i=i+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:45:55) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt))
	i=i+1
print(i)


	
	


-- ERROR:
File "XXXX", line 5
    if(vt[i]==max(vt))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:31) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:34) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- EXECUTION TIME:
0.455694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1602/main.py", line 4, in <module>
    while(size<(vt)):
TypeError: unorderable types: float() > function()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:35) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:36) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size<(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- EXECUTION TIME:
0.474129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1602/main.py", line 4, in <module>
    while(size<(vt)):
TypeError: unorderable types: float() > function()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:48:51) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(size>(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:22) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(i<size(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:26) 
-- CODE:
from numpy import *
vt=array(eval(input("digite o vetor: ")))
i=0
while(i<size(vt)):
	if(vt[i]==max(vt)):
		print(i)
	i=i+1



	
	


-- EXECUTION TIME:
0.360198
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
